# Stripe-API-Embedded-Form-FastAPI

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
