[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ZakPorat0 <zakporat2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
stripe = "^9.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
